--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -666,7 +666,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND_MULTI_PHASE=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -3693,6 +3693,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_ROW=y
 CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 
 #For WIFI hotspot urb will be drop issue
 CONFIG_RIL_PCN001_HTC_QUEUE_URB_TO_DEFERRED_ANCHOR=y
