--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3695,6 +3695,7 @@ CONFIG_DEFAULT_ROW=y
 CONFIG_DEFAULT_IOSCHED="row"
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #For WIFI hotspot urb will be drop issue
 CONFIG_RIL_PCN001_HTC_QUEUE_URB_TO_DEFERRED_ANCHOR=y
