S2W with pocket detection and vibrator fix

--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3685,6 +3685,7 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 #For store modem reset information
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 ##GruesomeWolfs Additions
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
